--- a/.github/workflows/build_macos.yml
+++ b/.github/workflows/build_macos.yml
@@ -2,10 +2,6 @@ name: Build macOS App
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   build-macos:
@@ -25,20 +21,38 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
 
-      - name: Build and publish for macOS
+      - name: Build and publish for macOS (x64)
         run: |
           dotnet publish -f net9.0-maccatalyst -c Release \
-            -p:RuntimeIdentifiers="maccatalyst-x64;maccatalyst-arm64" \
+            -p:RuntimeIdentifier=maccatalyst-x64 \
             -p:CreatePackage=true \
             -p:CodesignKey="" \
             -p:CodesignEntitlements="" \
             -p:EnableCodeSigning=false \
             -p:PublishTrimmed=false \
-            -o ./publish/macos
+            -o ./publish/macos-x64
 
-      - name: Upload macOS build artifacts
+      - name: Build and publish for macOS (ARM64)
+        run: |
+          dotnet publish -f net9.0-maccatalyst -c Release \
+            -p:RuntimeIdentifier=maccatalyst-arm64 \
+            -p:CreatePackage=true \
+            -p:CodesignKey="" \
+            -p:CodesignEntitlements="" \
+            -p:EnableCodeSigning=false \
+            -p:PublishTrimmed=false \
+            -o ./publish/macos-arm64
+
+      - name: Upload macOS x64 build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: nextui-setup-wizard-macos
-          path: ./publish/macos/
+          name: nextui-setup-wizard-macos-x64
+          path: ./publish/macos-x64/
+          retention-days: 30
+
+      - name: Upload macOS ARM64 build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: nextui-setup-wizard-macos-arm64
+          path: ./publish/macos-arm64/
           retention-days: 30
