--- a/.github/workflows/build_macos.yml
+++ b/.github/workflows/build_macos.yml
@@ -19,28 +19,28 @@ jobs:
         run: dotnet workload install maui
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore "NextUI Setup Wizard.csproj"
 
       - name: Build and publish for macOS (x64)
         run: |
-          dotnet publish -f net9.0-maccatalyst -c Release \
+          dotnet publish "NextUI Setup Wizard.csproj" -f net9.0-maccatalyst -c Release \
             -p:RuntimeIdentifier=maccatalyst-x64 \
             -p:CreatePackage=true \
             -p:CodesignKey="" \
             -p:CodesignEntitlements="" \
             -p:EnableCodeSigning=false \
-            -p:PublishTrimmed=false \
+            -p:PublishTrimmed=true \
             -o ./publish/macos-x64
 
       - name: Build and publish for macOS (ARM64)
         run: |
-          dotnet publish -f net9.0-maccatalyst -c Release \
+          dotnet publish "NextUI Setup Wizard.csproj" -f net9.0-maccatalyst -c Release \
             -p:RuntimeIdentifier=maccatalyst-arm64 \
             -p:CreatePackage=true \
             -p:CodesignKey="" \
             -p:CodesignEntitlements="" \
             -p:EnableCodeSigning=false \
-            -p:PublishTrimmed=false \
+            -p:PublishTrimmed=true \
             -o ./publish/macos-arm64
 
       - name: Upload macOS x64 build artifacts
