--- a/.github/workflows/build_macos.yml
+++ b/.github/workflows/build_macos.yml
@@ -46,13 +46,13 @@ jobs:
       - name: Upload macOS x64 build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: nextui-setup-wizard-macos-x64
+          name: NextUI-Setup-Wizard_x64.zip
           path: ./publish/macos-x64/
           retention-days: 30
 
       - name: Upload macOS ARM64 build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: nextui-setup-wizard-macos-arm64
+          name: NextUI-Setup-Wizard_arm64.zip
           path: ./publish/macos-arm64/
           retention-days: 30
