--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -50,6 +50,6 @@ jobs:
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: NextUI-Setup-Wizard.zip
+        name: NextUI-Setup-Wizard
         path: "bin/Release/net9.0-windows10.0.19041.0/*"
         retention-days: 30
