--- a/.github/workflows/build_macos.yml
+++ b/.github/workflows/build_macos.yml
@@ -18,11 +18,19 @@ jobs:
       - name: Install .NET MAUI workload
         run: dotnet workload install maui
 
+      - name: Get commit hash
+        id: commit
+        run: |
+          COMMIT_HASH=$(git rev-parse --short HEAD)
+          echo "Commit hash: $COMMIT_HASH"
+          echo "hash=$COMMIT_HASH" >> $GITHUB_OUTPUT
+
       - name: Restore dependencies
         run: dotnet restore "NextUI Setup Wizard.csproj"
 
       - name: Build and publish for macOS (ARM64)
         run: |
+          echo "Publishing with commit hash: ${{ steps.commit.outputs.hash }}"
           dotnet publish "NextUI Setup Wizard.csproj" -f net9.0-maccatalyst -c Release \
             -p:RuntimeIdentifier=maccatalyst-arm64 \
             -p:CreatePackage=true \
@@ -30,6 +38,7 @@ jobs:
             -p:CodesignEntitlements="" \
             -p:EnableCodeSigning=false \
             -p:PublishTrimmed=true \
+            -p:CommitHash="${{ steps.commit.outputs.hash }}" \
             -o ./publish/macos-arm64
 
       - name: Upload macOS ARM64 build artifacts
