--- a/.github/workflows/build_macos.yml
+++ b/.github/workflows/build_macos.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.0.x'
+          dotnet-version: '9.0.305'
 
       - name: Install .NET MAUI workload
         run: dotnet workload install maui
