--- a/NextUI Setup Wizard.csproj
+++ b/NextUI Setup Wizard.csproj
@@ -65,6 +65,7 @@
         <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.100" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.5" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
         <PackageReference Include="Microsoft.Maui.Core" Version="9.0.100" />
     </ItemGroup>
 
